# VibeMaster-studio

./: .gitignore  CLAUDE.md  HIERARCHICAL_SPATIAL_SAFETY_SYSTEM.md  QUEST_SYSTEM_DESIGN_AND_IMPLEMENTATION.md  README.md  SETUP_INSTRUCTIONS_EXISTING_PROJECT.md  START_HERE_TAURI_SETUP.md  TAURI_PRISMA_SETUP_INSTRUCTIONS.md  TAURI_SETUP_CHECKLIST.md  TAURI_SETUP_COMMANDS.md  TAURI_SETUP_SUMMARY.md  VIBEMASTER_NARRATIVE_ARCHITECTURE.md  VIBEMASTER_NARRATIVE_IMPLEMENTATION.md  check-tauri.sh  debug.html  index.html  package-lock.json  package.json  player-movement-example.ts  setup-vibemaster.ps1  test-db-connection.ts  test.html  tsconfig.json  vibemaster-studio.html  vite.config.ts
.claude/: settings.local.json
db setup/: .env.example  .gitignore  NPC.ts  README.md  SETUP_INSTRUCTIONS.md  WorldSimulation.ts  database.ts  index.ts  package.json  schema.prisma  types.ts
prisma/: dev.db
prisma/migrations/20251101134419_init/: migration.sql
src/: building-effects.ts  crisis-system.ts  crud-tests.ts  daily-cycle-system.ts  db-wrapper.ts  dev-server.ts  get-world-state.ts  location-crisis-system.ts  location-system.ts  main.ts  main.ts.backup  main.ts.sprite-analysis  need-based-behavior.ts  personality-system.ts  resource-system-with-logging.ts  resource-system.ts  resource-ui.ts  run-tests.ts  seed.ts  sprite-config.ts  threat-system.ts  town-safety-system.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/simulation/: NPC.ts
